--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Install SSH key
         uses: shimataro/ssh-key-action@v1
         with:
-          key: ${{ secrets.SSH_KEY }}
+          private-key: ${{ secrets.SSH_KEY }}
           known_hosts: ${{ secrets.KNOWN_HOSTS }}
       - name: Reload
         run: ssh ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} ~/www/onten2023/start.sh
