--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,7 +5,7 @@ on:
   push:
 #    branches-ignore: # Disable
 #      - '**'
-    branches: [ main ]
+    branches: [ master ]
 
 jobs:
   build:
@@ -19,4 +19,4 @@ jobs:
           private-key: ${{ secrets.SSH_KEY }}
           known_hosts: ${{ secrets.KNOWN_HOSTS }}
       - name: Reload
-        run: ssh ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} ~/www/onten2023/start.sh
+        run: ssh ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} -i .ssh/id_rsa ~/www/onten2023/start.sh
