--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,9 +14,9 @@ jobs:
 
     steps:
       - name: Install SSH key
-        uses: shimataro/ssh-key-action@v1
+        uses: shimataro/ssh-key-action@v2
         with:
-          private-key: ${{ secrets.SSH_KEY }}
+          key: ${{ secrets.SSH_KEY }}
           known_hosts: ${{ secrets.KNOWN_HOSTS }}
       - name: Reload
-        run: ssh ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} -i .ssh/id_rsa ~/www/onten2023/start.sh
+        run: ssh ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} -i ~/.ssh/id_rsa ~/www/onten2023/start.sh
